Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="Übungen.html">Übungen</a><br>
             <a href="tipp.html">Tipp</a><br>
             <a href="motivation.html">Motivation</a>
+<a href="Diätregeln .html">Motivation</a>
 
         </div>
     </main>
