Atualizar o Recepte.html

--- a/Recepte.html
+++ b/Recepte.html
@@ -560,7 +560,32 @@
     </ol>
   </div>
 </div>
+<div id="garnelenZucchiniKeto" class="receita" style="display: none;">
+  <h3>Keto Garnelen mit Zucchini</h3>
+  <h4>Zutaten</h4>
+  <ul>
+    <li>300g Garnelen, geschält und entdarmt</li>
+    <li>Saft von 1/2 Zitrone</li>
+    <li>1 Knoblauchzehe (gehackt oder gepresst)</li>
+    <li>Salz und Pfeffer nach Geschmack</li>
+    <li>1 Zucchini, in Scheiben geschnitten</li>
+    <li>2 Eier</li>
+    <li>1/2 Tasse Mandelmehl</li>
+    <li>1/4 Tasse geriebener Parmesan (optional)</li>
+    <li>Gewürze: Paprika, Oregano, Kurkuma (nach Wunsch)</li>
+    <li>Öl zum Braten (z. B. Kokosöl oder Olivenöl)</li>
+  </ul>
 
+  <h4>Zubereitung</h4>
+  <ol>
+    <li>Garnelen mit Zitrone, Knoblauch, Salz und Pfeffer marinieren (10 Minuten).</li>
+    <li>Zucchinischeiben mit etwas Salz bestreuen und 5 Minuten ruhen lassen. Danach abtupfen.</li>
+    <li>Mandelmehl, Parmesan und Gewürze in einer Schüssel vermengen.</li>
+    <li>Garnelen und Zucchini zuerst in Ei, dann in der Mehlmischung wenden.</li>
+    <li>In einer Pfanne mit Öl braten oder in der Heißluftfritteuse bei 200 °C ca. 15 Minuten knusprig backen.</li>
+  </ol>
+  <p><strong>Tipp:</strong> Auch im Ofen bei 200 °C ca. 20 Minuten backen, einmal wenden.</p>
+</div>
 
 
   
